# Tecniche_Algoritmi_APA_lab_CLION_TEMPLATE

./: .gitignore  CMakeLists.txt  README.md
E01/: CMakeLists.txt  main.c
E02/: CMakeLists.txt
E03/: CMakeLists.txt
E04/: CMakeLists.txt  main.c
EZZ/: CMakeLists.txt  in.txt  main.c
